--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@
 <h5>heading5</h5>
 <h6>heading6</h6>
 <a href="https://www.youtube.com/watch?v=Ez8F0nW6S-w&t=3401s">github lecture</a>
+<br>
+<a href="index1.html">go to hello</a>
+<!-- <p>agar relative link kisi folder k andar hai to folder ka naam bhi mention krna pdega</p> -->
+ <img src="https://www.shutterstock.com/image-illustration/dinosaur-isolated-on-white-background-600nw-2469707753.jpg"alt="dinosaur image" height="100">
